third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/display/non_display_implicit_enum_unit_variant.rs
#[derive(derive_more::Display, derive_more::UpperHex)]
enum Enum {
    UnitVariant,
}

#[derive(derive_more::Display, derive_more::UpperHex)]
#[upper_hex("default with {_variant}")]
enum EnumWithVariantInFmt {
    UnitVariant,
}

fn main() {}
